--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <title>CalendarVeg</title>
 </head>
 <body>
- hola   
+ Calendario de vegetales de temporada
+ 
+ <script>
+    //let Vegetales={};
+    const ENERO = 1;
+    const FEBRERO =2;
+    const MARZO = 3;
+    const ABRIL = 4;
+    const MAYO = 5;
+    const JUNIO = 6;
+    const JULIO = 7;
+    const AGOSTO = 8;
+    const SEPTIEMBRE = 9;
+    const OCTUBRE = 10;
+    const NOVIEMBRE = 11;
+    const DICIEMBRE = 12;
+
+    const Vegetales = [];
+
+    let dia = new Date();
+ 
+    Vegetales.push ({
+            nombre:"Melocotón",
+            tipo:"fruta",
+            initem: "3",
+            fintem: "5",
+            pretem: "2",
+            postem: "6"
+        }
+    );
+
+    Vegetales.push ({
+            nombre:"Manzana",
+            tipo:"fruta",
+            initem: "2",
+            fintem: "3",
+            pretem: "1",
+            postem: "4"
+        }
+    );
+    
+    Vegetales.push ({
+            nombre:"Remolacha",
+            tipo:"verdura",
+            initem: "6",
+            fintem: "8",
+            pretem: "5",
+            postem: "9"
+        }
+    );
+
+    Vegetales.push ({
+            nombre:"Lechuga",
+            tipo:"verdura",
+            initem: "9",
+            fintem: "11",
+            pretem: "8",
+            postem: "12"
+        }
+    );
+
+
+ </script>
 </body>
 </html>
